Truncated Posts and Fixed Post IMG

--- a/bandwagon/static/bandwagon/main.css
+++ b/bandwagon/static/bandwagon/main.css
@@ -93,8 +93,14 @@ body {
     font-weight: 550;
     font-style: oblique;
     text-shadow:
-		-0.5px -0.5px 0 purple,
-		0.5px -0.5px 0 purple,
-		-0.5px 0.5px 0 purple,
-		0.5px 0.5px 0 purple;
+		-1px -1px 0 purple,
+		1px -1px 0 purple,
+		-1px 1px 0 purple,
+		1px 1px 0 purple;
+  }
+
+  .post-img {
+    height: auto;
+    width: 100%;
+    margin-right: 8px;
   }
